Tests using chained Mongo queries and use the FSC in the IDEA scala-facet